<resources>
    <string name="app_name">Respiratory system</string>
    <string name="nose">Nose</string>
    <string name="mouth">Mouth</string>
    <string name="trachea">Trachea</string>
    <string name="lungs">Lungs</string>
    <string name="diaphragm">Diaphragm</string>
    <string name="please_write_the_name_of_each_part">please write the name of each part</string>
    <string name="check">Check</string>
    <string name="rest">Rest</string>
    <string name="go_to_explaining">Go to explaining</string>
    <string name="explain">explain</string>
    <string name="respiratory_system">Respiratory System</string>
    <string-array name="Parts_name">
        <item>Nose</item>
        <item>Mouth</item>
        <item>Trachea</item>
        <item>Lungs</item>
        <item>Diaphragm</item>
    </string-array>

    <string-array name="parts_explain">
        <item>The nose is the part of our body that helps us breathe. When we inhale, air flows through our nostrils and
            into the nasal cavity, where it is filtered by tiny hairs and mucus. The nose also warms and adds humidity
            to the air, and helps us smell different scents.
        </item>
        <item>The mouth is the part of our body that we use for eating, drinking, and talking. We use our teeth and
            tongue to chew food and move it around in our mouth, and our lips to drink liquids. We also use our mouth to
            make different sounds when we speak.
        </item>
        <item>The trachea is like a tube that connects our nose and mouth to our lungs. When we breathe in, air travels
            down the trachea, which has tiny hairs and mucus that help to clean the air. The trachea then splits into
            two smaller tubes that lead to our lungs. When we breathe out, air flows back up through the same tube and
            out of our nose or mouth.
        </item>
        <item>The lungs are two important organs in our chest that help us breathe. They take in air, which has oxygen
            that our body needs, and then release air, which has carbon dioxide that our body doesn\'t need. The lungs
            are protected by a thin layer and are helped by a large muscle in our chest.
        </item>
        <item>The diaphragm is a large muscle in our chest that helps us breathe. When we inhale, it moves down and
            creates space for air to come in. When we exhale, it moves up and pushes air out.
        </item>
    </string-array>
</resources>