<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView2"
            app:srcCompat="@drawable/download"

    />
    <EditText
            android:layout_width="97dp"
            android:layout_height="31dp"
            android:id="@+id/LungsText"
            android:layout_marginStart="28dp"
            tools:ignore="MissingConstraints"
            style="@style/textBg"
            android:layout_marginTop="245dp"
            android:layout_alignParentTop="true"/>
    <EditText
            android:layout_width="94dp"
            android:layout_height="28dp"
            android:id="@+id/NoseText"
            style="@style/textBg"
            android:layout_marginEnd="13dp"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="157dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>
    <EditText
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:id="@+id/MouthText"
            android:layout_marginEnd="8dp"
            style="@style/textBg"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="209dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>
    <EditText
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:id="@+id/TracheaText"
            style="@style/textBg"
            tools:ignore="MissingConstraints"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="255dp"/>
    <EditText
            android:layout_width="95dp"
            android:layout_height="33dp"
            android:id="@+id/DiaphragmText"
            tools:ignore="MissingConstraints"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="313dp"
            android:layout_marginTop="487dp"
            style="@style/textBg"
            android:layout_alignParentStart="true"
            android:layout_marginStart="3dp"/>
    <Button
            android:text="@string/nose"
            android:layout_width="103dp"
            android:layout_height="40dp"
            android:id="@+id/NoseButton"
            android:layout_marginEnd="7dp"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="150dp"
            android:layout_alignParentTop="true"
            android:visibility="gone"
            android:textSize="12sp"
            android:layout_alignEnd="@+id/NoseText"
            android:layout_alignParentEnd="true"/>
    <Button
            android:text="@string/mouth"
            android:layout_width="106dp"
            android:layout_height="37dp"
            android:id="@+id/MouthButton"
            tools:ignore="MissingConstraints"
            android:layout_alignParentStart="true"
            android:layout_marginStart="299dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="198dp"
            android:layout_marginEnd="-2dp"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_alignEnd="@+id/MouthText"/>
    <Button
            android:text="@string/trachea"
            android:layout_width="102dp"
            android:layout_height="35dp"
            android:id="@+id/TracheaButton"
            tools:ignore="MissingConstraints"
            android:textSize="12sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="305dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="4dp"
            android:layout_alignEnd="@+id/TracheaText"
            android:visibility="gone"
            android:layout_alignParentEnd="true"/>
    <Button
            android:text="@string/lungs"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="29dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="236dp"
            android:visibility="gone"
            android:id="@+id/LungsButton"/>
    <Button
            android:text="@string/diaphragm"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="213dp"
            android:id="@+id/DiaphragmButton"
            android:visibility="gone"
            android:layout_marginStart="-2dp"/>
    <TextView
            android:text="@string/please_write_the_name_of_each_part"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="53dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="33dp"
            android:id="@+id/hintLabel"/>
    <Button
            android:text="@string/check" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/check"
            tools:ignore="RelativeOverlap" android:layout_marginEnd="76dp" android:layout_marginBottom="95dp"/>
    <Button
            android:text="@string/rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/rest" android:layout_marginStart="92dp" android:layout_marginBottom="94dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textColor="#010CDD"
            android:textSize="14sp"
            android:layout_marginBottom="112dp"
            android:visibility="visible"
            android:id="@+id/explainLabel"
            android:layout_marginTop="76dp"
    />
    <Button
            android:text="@string/explain"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goTo" android:layout_alignParentBottom="true"
            android:layout_marginBottom="95dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="64dp" tools:ignore="RelativeOverlap"/>


</RelativeLayout>